vector-clickhouse-env: Improve nginx container build

--- a/vector-clickhouse-env/docker-compose.yml
+++ b/vector-clickhouse-env/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     command: bash -c "nginx && vector --config vector.toml"
     depends_on:
       - vector_server
+      - clickhouse_server
     links:
       - vector_server
     ports:
