--- a/vector-clickhouse-env/nginx-openresty/Dockerfile
+++ b/vector-clickhouse-env/nginx-openresty/Dockerfile
@@ -1,5 +1,7 @@
 FROM openresty/openresty:1.15.8.3-2-centos
 
+RUN yum -y update
+
 ADD setup.sh /tmp/setup.sh
 RUN chmod +rwx /tmp/setup.sh
 RUN /tmp/setup.sh
