--- a/vector-clickhouse-env/nginx-openresty/conf.d/default.conf
+++ b/vector-clickhouse-env/nginx-openresty/conf.d/default.conf
@@ -8,9 +8,8 @@ server {
     server_name  localhost;
     access_log /var/log/nginx/access.log main;
 
-    location / {
-        root   html;
-        index  index.html index.htm;
+   location / {
+        proxy_pass http://backend;
     }
 
     location /lua-test {
